--- a/Final Submission/projFinal.ipynb
+++ b/Final Submission/projFinal.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "First we had several approaches like mimic celebrity voices (vocal mimicry), detect and remove stuttering in speech and we decided we would do detect and remove fillers from speech recordings, which will be a very reasonable stepping stone for those bigger goals.\n",
     "\n",
-    "Our final goal is detecting if a sound is a filler word. Then we verify if a sentence contains filler words, and  remove the filler word that the machine detects and we finally produce a sentence that is without the filler word.\n",
+    "Our final goal is detecting if a sound is a filler word. Then we verify if a sentence contains filler words, and  remove the filler word that the machine detects and we finally produce a sentence that is without the filler words.\n",
     "### 3. Group members\n",
     "    Juan Eckert\n",
     "\n",
@@ -31,7 +31,11 @@
     "\n",
     "    Tony Shi\n",
     "### 4. Summary of Findings\n",
-    "We find that for our kind of data (audio file to be determined as filler and non-filler), using the clustering algorithm, basic neural network and logistic regression are not suitable options. And we can see that based on our classification algorithm, the kernel SVM works the best. There are a lot of rooms for modifying and for possible erros due to many assumptions we made from the data collection phase (high skew for male voice and american accent, clean background) to the PCA phase (the chosen featured data's dimension is 20x4). "
+    "We find that for our kind of data (audio file to be determined as filler and non-filler), using the clustering algorithm, basic neural network and logistic regression are not suitable options. And we can see that based on our classification algorithm, the kernel SVM works the best. There are a lot of rooms for modifying and for possible erros due to many assumptions we made from the data collection phase (high skew for male voice and american accent, clean background) to the PCA phase (the chosen featured data's dimension is 20x4).\n",
+    "\n",
+    "Also, we found out that the talking speech may not be important as long as the speaker has a slightly clearer pause when it comes to the filler words. Besides, in order to improve the final smoothed version of audio, we should record the timestamp of each chunk when splitting, and then remove only that portion of filler chunk out, instead of glueing all the chunks together. \n",
+    "\n",
+    "Additionally, we find out that another possible approach for this project maybe looking at the transcripts or try using the pre-constructed voice to text algorithms and detect filler words by combining both transcripts and audio files"
    ]
   },
   {
