--- a/Final Submission/projFinal.ipynb
+++ b/Final Submission/projFinal.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "    Tony Shi\n",
     "### 4. Summary of Findings\n",
-    "We find that for our kind of data (audio file to be determined as filler and non-filler), using the clustering algorithm, basic neural network and logistic regression are not suitable options. And we can see that based on our classification algorithm, the kernel SVM works the best. There are a lot of rooms for modifying and for possible erros due to many assumptions we made from the data collection phase (high skew for male voice and american accent, clean background) to the PCA phase (the chosen featured data's dimension is 20x4).\n",
+    "We find that for our kind of data (audio file to be determined as filler and non-filler), using the clustering algorithm, and logistic regression are not suitable options. And we can see that based on our classification algorithm, the kernel SVM works the best. There are a lot of rooms for modifying and for possible erros due to many assumptions we made from the data collection phase (high skew for male voice and american accent, clean background) to the PCA phase (the chosen featured data's dimension is 20x4).\n",
     "\n",
     "Also, we found out that the talking speech may not be important as long as the speaker has a slightly clearer pause when it comes to the filler words. Besides, in order to improve the final smoothed version of audio, we should record the timestamp of each chunk when splitting, and then remove only that portion of filler chunk out, instead of glueing all the chunks together. \n",
     "\n",
@@ -778,6 +778,13 @@
    ],
    "source": [
     "plot_CVE(chunks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After many observations from different audio files, we decided to choose a number of components of 4 which overall explained a high variance of data"
    ]
   },
   {
@@ -1909,7 +1916,7 @@
     }
    ],
    "source": [
-    "test_name = 'test_4'\n",
+    "test_name = 'test_4' #or test_name = 'demo'\n",
     "wave, fs = librosa.load(test_name+'.wav')\n",
     "print(\"Frequency:\",fs)\n",
     "print(\"Duration:\",len(wave)/fs,\"s\")\n",
